solved some uat bugs............

--- a/src/app/modules/admin/components/check-quality-action/check-quality-action.component.scss
+++ b/src/app/modules/admin/components/check-quality-action/check-quality-action.component.scss
@@ -11,7 +11,7 @@
 //     overflow: auto;
 //   //  border: ridge 3px;
 
- 
+
 // }
 
 // #table{
@@ -25,7 +25,7 @@
 //   // border:none;
 //    padding: 5px;
 //    margin-left: 30px;
-  
+
 // }
 
 // .custom-table td{
@@ -35,7 +35,7 @@
 
 
 
- 
+
 // }
 // .custom-table th{
 //   font-size: 20px;
@@ -52,8 +52,8 @@
 // #submittedbtns{
 //     margin-top:30px;
 //    margin-left: 500px;
-  
-  
+
+
 // }
 // #printbtn{
 //   margin-left: 800px;
@@ -74,56 +74,58 @@
  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
  *   All rights reserved.
  */
- #form{
-  width:1000px;
+#form {
+  width: 1000px;
   height: 600px;
   overflow-y: auto;
   overflow-x: hidden;
-//  border: ridge 3px;
+  //  border: ridge 3px;
 
 }
 
-#table{
-border: ridge 2px;
-margin-left: 20px;
-margin-right: 20px;
+#table {
+  border: ridge 2px;
+  margin-left: 20px;
+  margin-right: 20px;
 
 }
 
 
-#submittedbtns{
-margin-top:30px;
-margin-left: 400px;
+#submittedbtns {
+  margin-top: 30px;
+  margin-left: 400px;
 }
 
 
 
 .custom-table td,
 .custom-table th {
-// border:none;
-padding: 5px;
-margin-left: 30px;
+  // border:none;
+  padding: 5px;
+  margin-left: 30px;
 
 }
 
-.custom-table td{
-font-size: 20px;
-font-family:initial ;
-padding-left: 70px;
+.custom-table td {
+  font-size: 20px;
+  font-family: initial;
+  padding-left: 70px;
 }
-.custom-table th{
-font-size: 20px;
-font-family:initial ;
-padding-left: 60px;
-border-bottom: 1px solid black;
+
+.custom-table th {
+  font-size: 20px;
+  font-family: initial;
+  padding-left: 60px;
+  border-bottom: 1px solid black;
 
 }
-h1{
-margin-left: 480px;
-color: coral;
-font-weight:bolder;
-font-family: initial;
-font-size: 30px;
+
+h1 {
+  margin-left: 480px;
+  color: coral;
+  font-weight: bolder;
+  font-family: initial;
+  font-size: 30px;
 }
 
 // #printbtn{
@@ -139,103 +141,107 @@ font-size: 30px;
 
 
 
-#crossbtn{
-margin-left: 940px;
-margin-top: -60px;
-color: red;
-border: solid black 1px;
-padding: 5px;
-position: sticky;
-position: absolute;
-font-size: 20px;
+#crossbtn {
+  margin-left: 940px;
+  margin-top: -60px;
+  color: red;
+  border: solid black 1px;
+  padding: 5px;
+  position: sticky;
+  position: absolute;
+  font-size: 20px;
 
 }
-body{
-  background-color:var(--toast-background);
-  color:var(--toast-text);
+
+body {
+  background-color: var(--toast-background);
+  color: var(--toast-text);
 }
+
 ::ng-deep .mat-dialog-container {
   background-color: var(--toast-background); // Use your custom color here
   color: var(--toast-text); // Use your custom text color here
 }
 
-@media screen and (min-width:360px) and (max-width:1400px) {
-#form{
-width:1000px;
-height: 520px;
-overflow-y: auto;
-overflow-x: hidden;
+@media only screen and (min-width:768px) and (max-width:1024px) {
+  #form {
+    width: 1000px;
+    height: 520px;
+    overflow-y: auto;
+    overflow-x: hidden;
 
-//  border: ridge 3px;
+    //  border: ridge 3px;
 
-}
+  }
 
-#table{
-border: ridge 2px;
-margin-left: 20px;
-margin-right: 20px;
+  #table {
+    border: ridge 2px;
+    margin-left: 20px;
+    margin-right: 20px;
 
-}
-
-
-#submittedbtns{
-margin-top:30px;
-margin-left: 400px;
-}
+  }
 
 
-
-.custom-table td,
-.custom-table th {
-// border:none;
-padding: 5px;
-margin-left: 30px;
-
-}
-
-.custom-table td{
-font-size: 20px;
-font-family:initial ;
-padding-left: 70px;
-}
-.custom-table th{
-font-size: 20px;
-font-family:initial ;
-padding-left: 60px;
-border-bottom: 1px solid black;
-
-}
-h1{
-margin-left: 480px;
-color: coral;
-font-weight:bolder;
-font-family: initial;
-font-size: 30px;
-}
-
-// #printbtn{
-//   margin-left: 810px;
-//  margin-top: -10px;
-//   width: 100px;
-//   height: 30px;
-//   color: cadetblue;
-//   margin-top:20px;
-//   position: absolute;
-// }
+  #submittedbtns {
+    margin-top: 30px;
+    margin-left: 400px;
+  }
 
 
 
+  .custom-table td,
+  .custom-table th {
+    // border:none;
+    padding: 5px;
+    margin-left: 30px;
 
-#crossbtn{
-margin-left: 940px;
-margin-top: -60px;
-color: red;
-border: solid black 1px;
-padding: 2px;
-position:sticky;
-position: absolute;
-font-size: 20px;
+  }
 
-}
+  .custom-table td {
+    font-size: 20px;
+    font-family: initial;
+    padding-left: 70px;
+  }
+
+  .custom-table th {
+    font-size: 20px;
+    font-family: initial;
+    padding-left: 60px;
+    border-bottom: 1px solid black;
+
+  }
+
+  h1 {
+    margin-left: 480px;
+    color: coral;
+    font-weight: bolder;
+    font-family: initial;
+    font-size: 30px;
+  }
+
+  // #printbtn{
+  //   margin-left: 810px;
+  //  margin-top: -10px;
+  //   width: 100px;
+  //   height: 30px;
+  //   color: cadetblue;
+  //   margin-top:20px;
+  //   position: absolute;
+  // }
+
+
+
+
+  #crossbtn {
+    margin-left: 940px;
+    margin-top: -60px;
+    color: red;
+    border: solid black 1px;
+    padding: 2px;
+    position: sticky;
+    position: absolute;
+    font-size: 20px;
+
+  }
 
 }
