--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
@@ -6,44 +6,46 @@
 
 
 
-#form{
-    width:auto;
-    height: 600px;
-    overflow: auto;
+#form {
+  width: auto;
+  height: 600px;
+  overflow: auto;
   //  border: ridge 3px;
 }
 
-#table{
-border: ridge 2px;
-margin-left: 20px;
-margin-right: 20px;
+#table {
+  border: ridge 2px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .custom-table td,
 .custom-table th {
   // border:none;
-   padding: 5px;
-   margin-left: 30px;
-  
+  padding: 5px;
+  margin-left: 30px;
+
 }
 
-.custom-table td{
+.custom-table td {
   font-size: 20px;
-font-family:initial ;
+  font-family: initial;
   padding-left: 70px;
 
 
 
- 
+
 }
-.custom-table th{
+
+.custom-table th {
   font-size: 20px;
-  font-family:initial ;
+  font-family: initial;
   padding-left: 60px;
   border-bottom: 1px solid black;
 
 }
-h1{
+
+h1 {
   margin-left: 450px;
   color: coral;
   font-family: intial;
@@ -51,12 +53,13 @@ h1{
   margin-left: 550px;
 }
 
-#submittedbtns{
-    margin-top:30px;
-   margin-left: 420px;
-  
-  
+#submittedbtns {
+  margin-top: 30px;
+  margin-left: 420px;
+
+
 }
+
 // #printbtn{
 //   margin-left: 900px;
 //   width: 100px;
@@ -66,19 +69,21 @@ h1{
 //   position: absolute;
 // }
 
-#secondform{
+#secondform {
   margin-top: -100px;
 }
-#crossbtn{
+
+#crossbtn {
   margin-left: 1090px;
   margin-top: -60px;
   position: absolute;
-   color: red;
-   border: solid 1px black;
-   font-size: 22px;
-   padding: 5px;
+  color: red;
+  border: solid 1px black;
+  font-size: 22px;
+  padding: 5px;
 }
-#checkboxes{
+
+#checkboxes {
   display: inline-flex;
   margin-top: 40px;
   position: relative;
@@ -86,91 +91,98 @@ h1{
 
 }
 
-body{
-  background-color:var(--toast-background);
-  color:var(--toast-text);
+body {
+  background-color: var(--toast-background);
+  color: var(--toast-text);
 }
+
 ::ng-deep .mat-dialog-container {
   background-color: var(--toast-background); // Use your custom color here
   color: var(--toast-text); // Use your custom text color here
 }
-@media screen and (min-width:360px) and (max-width:1360px){
-  #form{
-    width:1000px;
+
+@media only screen and (min-width:768px) and (max-width:1024px) {
+  #form {
+    width: 1000px;
     height: 500px;
     overflow: auto;
-  //  border: ridge 3px;
-}
-
-#table{
-border: ridge 2px;
-margin-left: 20px;
-margin-right: 20px;
-}
-
-.custom-table td,
-.custom-table th {
-  // border:none;
-   padding: 5px;
-   margin-left: 30px;
-  
-}
-
-.custom-table td{
-  font-size: 20px;
-font-family:initial ;
-  padding-left: 70px;
-
-
-
- 
-}
-.custom-table th{
-  font-size: 20px;
-  font-family:initial ;
-  padding-left: 60px;
-  border-bottom: 1px solid black;
-
-}
-h1{
-
-  color: coral;
-  font-family: intial;
-  font-weight: bolder;
-  margin-left: 450px;
-}
-
-#submittedbtns{
-    margin-top:30px;
-   margin-left: 350px;
+    //  border: ridge 3px;
   }
-// #printbtn{
-//   margin-left: 900px;
-//   width: 100px;
-//   height: 30px;
-//   color: cadetblue;
-//   margin-top:5px;
-//   position: absolute;
-// }
 
-#secondform{
-  margin-top: -100px;
-}
-#crossbtn{
-  margin-left: 950px;
-  margin-top: -60px;
-  position: absolute;
-   color: red;
-   border: solid 1px black;
-   font-size: 22px;
-   padding: 5px;
-}
-#checkboxes{
-  display: inline-flex;
-  margin-top: 40px;
-  position: relative;
-  margin-left: -40px;
+  #table {
+    border: ridge 2px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
-}
-  
+  .custom-table td,
+  .custom-table th {
+    // border:none;
+    padding: 5px;
+    margin-left: 30px;
+
+  }
+
+  .custom-table td {
+    font-size: 20px;
+    font-family: initial;
+    padding-left: 70px;
+
+
+
+
+  }
+
+  .custom-table th {
+    font-size: 20px;
+    font-family: initial;
+    padding-left: 60px;
+    border-bottom: 1px solid black;
+
+  }
+
+  h1 {
+
+    color: coral;
+    font-family: intial;
+    font-weight: bolder;
+    margin-left: 450px;
+  }
+
+  #submittedbtns {
+    margin-top: 30px;
+    margin-left: 350px;
+  }
+
+  // #printbtn{
+  //   margin-left: 900px;
+  //   width: 100px;
+  //   height: 30px;
+  //   color: cadetblue;
+  //   margin-top:5px;
+  //   position: absolute;
+  // }
+
+  #secondform {
+    margin-top: -100px;
+  }
+
+  #crossbtn {
+    margin-left: 950px;
+    margin-top: -30px;
+    position: relative;
+    color: red;
+    border: solid 1px black;
+    font-size: 22px;
+    padding: 5px;
+  }
+
+  #checkboxes {
+    display: inline-flex;
+    margin-top: 40px;
+    position: relative;
+    margin-left: -40px;
+
+  }
+
 }
