--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
@@ -248,6 +248,7 @@
   height: 30px;
 color: black;
   // margin-top: -200px;
+  background-color:#FF8C00;
 }
 .printbtn2{
   // margin-left: 1100px;
@@ -257,6 +258,7 @@ color: black;
    margin-top: 10px;
    margin-left: -10px;
    position: relative;
+   background-color:#FF8C00;
 }
 #printbtns{
   margin-left: 800px;
@@ -320,7 +322,7 @@ body{
   background-color: var(--toast-background); // Use your custom color here
   color: var(--toast-text); // Use your custom text color here
 }
-@media screen and (min-width:360px) and (max-width:1360px){
+@media only screen and (min-width:768px) and (max-width:1024px){
   #form{
     width: 900px;
     height:520px;
