--- a/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.scss
+++ b/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.scss
@@ -158,6 +158,7 @@
   width: 100px;
   height: 30px;
 color: black;
+background-color:#FF8C00;
   // margin-top: -200px;
 }
 .printbtn2{
@@ -168,6 +169,7 @@ color: black;
    margin-top: 10px;
    margin-left: -10px;
    position: relative;
+   background-color:#FF8C00;
 }
 #printbtns{
   margin-left: 800px;
@@ -232,7 +234,7 @@ body{
   color: var(--toast-text); // Use your custom text color here
 }
 
-@media screen and (min-width:360px) and (max-width:1360px) {
+@media only screen and (min-width:768px) and (max-width:1024px) {
   #form {
     width: 900px;
     height: 550px;
@@ -272,6 +274,7 @@ body{
     width: 100px;
     height: 30px;
     color: black;
+    background-color:#FF8C00;
     // margin-top: -200px;
   }
 
@@ -283,6 +286,7 @@ body{
     margin-top: 10px;
     margin-left: -10px;
     position: relative;
+    background-color:#FF8C00;
   }
 
   #printbtns {
