--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
@@ -2,14 +2,14 @@
  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
  *   All rights reserved.
  */
-#form{
+#form {
     width: 1100px;
     height: 550px;
     overflow: hidden;
-    
+
 }
 
-.card1{
+.card1 {
     // height: 200px;
     margin-top: 50px;
     border: ridge 1px;
@@ -20,136 +20,149 @@
 }
 
 
-.lables{
+.lables {
     font-size: 20px;
     font-weight: bolder;
     font-family: initial;
     // margin-left: 18px;
     margin-top: 20px;
-  
-}
-#submittedbtns{
-     margin-top:-80px;
-    margin-left: 350px;
-   font-family: initial;
-   
+
 }
 
-h1{
-  margin-left: 500px;
-  color:coral;
-  margin-top: 30px;
-  font-family: initial;
-  font-weight: bolder;
-  
+#submittedbtns {
+    margin-top: -80px;
+    margin-left: 350px;
+    font-family: initial;
+
 }
-#printbtn{
+
+h1 {
+    margin-left: 500px;
+    color: coral;
+    margin-top: 30px;
+    font-family: initial;
+    font-weight: bolder;
+
+}
+
+#printbtn {
     margin-left: 900px;
     width: 100px;
     height: 30px;
-    color: cadetblue;
+    color: black;
     margin-top: 60px;
     position: absolute;
+    background-color: #FF8C00;
 }
 
-.col-3{
+.col-3 {
     margin-left: 60px;
     margin-top: 50px;
 }
-#secondrow{
+
+#secondrow {
     margin-top: -50px;
 }
 
 
 
-#crossbtn{
+#crossbtn {
     margin-left: 1070px;
     margin-top: -10px;
-     color: red;
-     font-size: 20px;
-     border: solid black 1px;
-     padding: 5px;
-     position: absolute;
-  }
-  body{
-    background-color:var(--toast-background);
-    color:var(--toast-text);
-  }
-  ::ng-deep .mat-dialog-container {
+    color: red;
+    font-size: 20px;
+    border: solid black 1px;
+    padding: 5px;
+    position: absolute;
+}
+
+body {
+    background-color: var(--toast-background);
+    color: var(--toast-text);
+}
+
+::ng-deep .mat-dialog-container {
     background-color: var(--toast-background); // Use your custom color here
     color: var(--toast-text); // Use your custom text color here
-  }
-@media screen and (min-width:360px) and (max-width:1400px){
+}
+
+@media only screen and (min-width:768px) and (max-width:1024px) {
+
     // [class*="col-3"] {
     //     width: 30%;
     //     padding: 0px;
     //   }
-      #form{
+    #form {
         width: 960px;
         height: 530px;
         overflow: hidden;
-        
+
     }
-    
-    .card1{
-     
+
+    .card1 {
+
         margin-top: 50px;
         border: ridge 1px;
         height: 400px;
         border-color: black;
         border-radius: 15px;
-    
+
     }
-    
-    
-    .lables{
+
+
+    .lables {
         font-size: 20px;
         font-weight: bolder;
         font-family: initial;
         // margin-left: 18px;
         margin-top: 20px;
-      
+
     }
-    #submittedbtns{
-         margin-top:-80px;
+
+    #submittedbtns {
+        margin-top: -80px;
         margin-left: 330px;
-       font-family: initial;
-       
+        font-family: initial;
+
     }
-    
-    h1{
-      margin-left: 450px;
-      color:coral;
-      margin-top: 30px;
-      font-family: initial;
-      font-weight: bolder;
-      
+
+    h1 {
+        margin-left: 450px;
+        color: coral;
+        margin-top: 30px;
+        font-family: initial;
+        font-weight: bolder;
+
     }
-    #printbtn{
+
+    #printbtn {
         margin-left: 800px;
         width: 100px;
         height: 30px;
         color: cadetblue;
         margin-top: 60px;
         position: absolute;
+        background-color: #FF8C00;
+
     }
-    
-    .col-3{
+
+    .col-3 {
         margin-left: 60px;
         margin-top: 50px;
     }
-    #secondrow{
+
+    #secondrow {
         margin-top: -50px;
     }
-    
-    #crossbtn{
+
+    #crossbtn {
         margin-left: 950px;
         margin-top: -10px;
-         color: red;
-         font-size: 20px;
-         border: solid black 1px;
-         padding: 5px;
-         position: absolute;
-      }
-    
+        color: red;
+        font-size: 20px;
+        border: solid black 1px;
+        padding: 5px;
+        position: absolute;
+    }
+
 }
