--- a/src/app/product-sku-detail/product-sku-detail.component.html
+++ b/src/app/product-sku-detail/product-sku-detail.component.html
@@ -32,9 +32,11 @@
                     <path
                         d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z" />
                 </svg>
-                <img src={{imageBaseUrl}}{{img.productSkuImage}} alt="no" width="100px" height="70px" class="Skuimgs"
+                <!-- <img src="'http://localhost:1337' + {{getimages(img.strapiImgId)}}'" alt="no" width="100px" height="70px" class="Skuimgs"
+                    [ngClass]="{'primary-image': isPrimary}"> -->
+                    <img [src]="'http://192.168.50.54:1337' + getimages(img.strapiImgId)" alt="no" width="100px" height="70px" class="Skuimgs"
                     [ngClass]="{'primary-image': isPrimary}">
-
+               
                 <!-- <button (click)="setPrimary()">Set as primary</button> -->
             </div>
         </div>
